try to fix weird hover thingy on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -487,4 +487,7 @@ footer .footer-below {
     width: 100%;
     /* The width is the width of the web page */
   }
-  
+
+  @media (hover) {
+
+}
